--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@
             element.classList.add('active');
         }
 
+        function selectirradiations(element) {
+            const buttons = document.querySelectorAll('.irradiations button');
+            buttons.forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+        }
 
         function showMenu(menu) {
             document.querySelectorAll('.menu-section').forEach(section => {
