--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <button type="button" onclick="selectSymptom(this)">オフのみ</button>
             </div>
             
-<label id="repairLabel">※お直しネイルを選択された方は本数をお選びください</label>
+<label id="repairLabel">本数をお選びください</label>
 <div id="repairButtons" class="irradiations">
                 <button type="button" id="oneirradiations" onclick="selectirradiations(this)">1本</button>
                 <button type="button" id="twoirradiations" onclick="selectirradiations(this)">2本</button>
@@ -338,7 +338,7 @@
     const repairLabel = document.getElementById('repairLabel');
     const repairButtons = document.getElementById('repairButtons');
 
-    if (selectedSymptom === 'お直しネイル') {
+    if (selectedSymptom === 'お直しネイル' || selectedSymptom === '長さ出し') {
         repairLabel.style.display = 'block';
         repairButtons.style.display = 'flex';
     } else {
