--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@ function selectDate(cell) {
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom,
+                irradiations: irradiations,
                 dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
