--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>予約フォーム1</h1>
+        <h1>princess<br>予約フォーム</h1>
         <div class="label">お客様名</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
