--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-        .visit-buttons, .symptoms, .menu-sections  {
+        .visit-buttons, .symptoms, .menu-sections, .irradiations  {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
         }
-        .visit-buttons button, .symptoms button, .menu-sections button  {
+        .visit-buttons button, .symptoms button, .menu-sections button, .irradiations button  {
             flex: 1;
             padding: 10px;
             border: 1px solid #ccc;
@@ -66,7 +66,7 @@
             text-align: center;
             white-space: nowrap;
         }
-        .visit-buttons button.active, .symptoms button.active, .menu-sections button.activee  {
+        .visit-buttons button.active, .symptoms button.active, .menu-sections button.active, .irradiations button.active  {
             background-color: #444;
             color: #fff;
         }
@@ -200,72 +200,52 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">オフなし</button>
         </div>
 
-        <label>メニューをお選びください</label>
+        <div class="label">メニューをお選びください</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">脱毛男性メニュー</button>
-            <button type="button" onclick="showMenu('female')">脱毛女性メニュー</button>
-            <button type="button" onclick="showMenu('kids')">脱毛子供メニュー</button>
-            <button type="button" onclick="showMenu('aesthetic')">エステメニュー</button>
-            <button type="button" onclick="showMenu('whitening')">ホワイトニングメニュー</button>
+            <button type="button" onclick="showMenu('male')">ハンドメニュー</button>
+            <button type="button" onclick="showMenu('female')">フットメニュー</button>
         </div>
 
         <div id="male" class="menu-section">
-            <label>◆脱毛メニュー◆<br><br>---男性限定---</label>
+            <label>◆ハンドメニュー◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">【脱毛】全顔</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】鼻下と口下</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】両頬</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】顎、顎下</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】ワキ</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
+                <button type="button" onclick="selectSymptom(this)">デザインアートコース</button>
+                <button type="button" onclick="selectSymptom(this)">4本アートコース</button>
+                <button type="button" onclick="selectSymptom(this)">2本アートコース</button>
+                <button type="button" onclick="selectSymptom(this)">定額デザインコース</button>
+                <button type="button" onclick="selectSymptom(this)">グラデーション</button>
+                <button type="button" onclick="selectSymptom(this)">フレンチ</button>
+                <button type="button" onclick="selectSymptom(this)">ワンカラー</button>
+                <button type="button" onclick="selectSymptom(this)">お直しネイル</button>
+                <button type="button" onclick="selectSymptom(this)">長さ出し</button>
+                <button type="button" onclick="selectSymptom(this)">ハンドネイルケア</button>
+                <button type="button" onclick="selectSymptom(this)">オフのみ</button>
+            </div>
+            
+<label id="repairLabel">本数をお選びください</label>
+<div id="repairButtons" class="irradiations">
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)">1本</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)">2本</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)">3本</button>
+                <button type="button" id="fourirradiations" onclick="selectirradiations(this)">4本</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)">5本</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)">6本</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)">7本</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)">8本</button>
+                <button type="button" id="nineirradiations" onclick="selectirradiations(this)">9本</button>
+                <button type="button" id="tenirradiations" onclick="selectirradiations(this)">10本</button>
             </div>
         </div>
 
         <div id="female" class="menu-section">
-            <label>◆脱毛メニュー◆<br><br>---女性限定---</label>
+            <label>◆フットメニュー◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOあり)</button>
-                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOなし)</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ5箇所</button>
-                <button type="button" onclick="selectSymptom(this)">お顔かVIO</button>
-                <button type="button" onclick="selectSymptom(this)">お顔とVIO</button>
+                <button type="button" onclick="selectSymptom(this)">フットデザインアートコース</button>
+                <button type="button" onclick="selectSymptom(this)">親指アートコース</button>
+                <button type="button" onclick="selectSymptom(this)">フット角質ケア</button>
             </div>
         </div>
 
-        <div id="kids" class="menu-section">
-            <label>◆脱毛メニュー◆<br><br>---子供限定---</label>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">ワキ(子供)</button>
-                <button type="button" onclick="selectSymptom(this)">お顔(子供)</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所(子供)</button>
-            </div>
-        </div>
-        
-        <div id="aesthetic" class="menu-section">
-            <label>◆エステメニュー◆</label>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">オーダーメイドfacialコース</button>
-                <button type="button" onclick="selectSymptom(this)">ボディトリートメント</button>
-                <button type="button" onclick="selectSymptom(this)">光フォトfacialコース</button>
-                <button type="button" onclick="selectSymptom(this)">エクソソームフェイシャル</button>
-                <button type="button" onclick="selectSymptom(this)">脱がない子宮温活</button>
-                <button type="button" onclick="selectSymptom(this)">フェムエステスタンダード</button>
-                <button type="button" onclick="selectSymptom(this)">フェムエステスペシャル</button>
-            </div>
-        </div>
-
-        <div id="whitening" class="menu-section">
-            <label>◆ホワイトニングメニュー◆</label>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">ホワイトニング都度払い</button>
-                <button type="button" onclick="selectSymptom(this)">ホワイトニング学割U24</button>
-                <button type="button" onclick="selectSymptom(this)">ホワイトニングプレミアムコース</button>
-                <button type="button" onclick="selectSymptom(this)">ホワイトニング5回券</button>
-                <button type="button" onclick="selectSymptom(this)">ホワイトニング8回券</button>
-                <button type="button" onclick="selectSymptom(this)">ホワイトニング12回券</button>
-            </div>
-        </div>
         <div class="label">希望日時</div>
         <div class="calendar-container">
             <div class="week-button-container">
@@ -331,11 +311,41 @@
             visitCount = button.id === 'firstVisit' ? 'オフあり' : 'オフなし';
         }
 
+        function selectirradiations(element) {
+            /* 訪問回数ボタンの選択状態をリセット */
+            document.getElementById('oneirradiations').classList.remove('active');
+            document.getElementById('twoirradiations').classList.remove('active');
+            document.getElementById('threeirradiations').classList.remove('active');
+            document.getElementById('fourirradiations').classList.remove('active');
+            document.getElementById('fiveirradiations').classList.remove('active');
+            document.getElementById('sixirradiations').classList.remove('active');
+            document.getElementById('sevenirradiations').classList.remove('active');
+            document.getElementById('eightirradiations').classList.remove('active');
+            document.getElementById('nineirradiations').classList.remove('active');
+            document.getElementById('tenirradiations').classList.remove('active');
+            /* クリックされたボタンを選択状態にする */
+            element.classList.add('active');
+            /* 選択された訪問回数を変数に格納 */
+            irradiationsCount = element.innerText;
+        }
+
         function selectSymptom(button) {
             const buttons = document.querySelectorAll('.symptoms button');
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
             selectedSymptom = button.textContent;
+
+    const repairLabel = document.getElementById('repairLabel');
+    const repairButtons = document.getElementById('repairButtons');
+
+    if (selectedSymptom === 'お直しネイル' || selectedSymptom === '長さ出し') {
+        repairLabel.style.display = 'block';
+        repairButtons.style.display = 'flex';
+    } else {
+        repairLabel.style.display = 'none';
+        repairButtons.style.display = 'none';
+    }
+}
 
         function showMenu(menu) {
             document.querySelectorAll('.menu-section').forEach(section => {
@@ -375,6 +385,7 @@ function selectDate(cell) {
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom,
+                irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
