--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>テンプレートフォームJ<br>予約フォーム</h1>
+        <h1>Elegram<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -201,47 +201,104 @@
         </div>
 
         <div class="label">メニューをお選びください</div>
+<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目1</p>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ブライダルコース</button>
+            <button type="button" onclick="showMenu('male')">フェイシャルメニュー</button>
             <button type="button" onclick="showMenu('female')">シェービングコース</button>
             <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
         </div>
 
         <div id="male" class="menu-section">
-            <label>◆ブライダルコース◆</label>
+<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目2</p>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">和装プラン</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">洋装プランA</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">洋装プランB</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">洋装プランC</button>
-            </div>
-            <label>オプション</label>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ(パック付き)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">リラックスマッサージの(パック付き)</button>
+                <button type="button" onclick="selectSymptom(this)">小顔輪郭矯正</button>
+                <button type="button" onclick="selectSymptom(this)">ピーリングメニュー</button>
+                <button type="button" onclick="selectSymptom(this)">毛穴ハイドラメニュー</button>
+                <button type="button" onclick="selectSymptom(this)">肌質改善光フォトメニュー</button>
+                <button type="button" onclick="selectSymptom(this)">脂肪分解・細胞リフトアップメニュー</button>
             </div>
         </div>
+
+<div id="irradiations1" class="irradiations" style="display: none;">
+<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目3</p>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正リフトアップコース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正エラ張りコース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正脂肪分解ECSコース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正肩こりスッキリコース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正顔筋リフトアップコース</button>
+</div>
+
+<div id="irradiations2" class="irradiations" style="display: none;">
+<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目3</p>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+</div>
+
+<div id="irradiations3" class="irradiations" style="display: none;">
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+</div>
+
+<div id="irradiations4" class="irradiations" style="display: none;">
+            <label>◆シェービングコース◆</label>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+</div>
+
+<div id="irradiations5" class="irradiations" style="display: none;">
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ(パック付き)</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">リラックスマッサージ(パック付き)</button>
+</div>
 
         <div id="female" class="menu-section">
             <label>◆シェービングコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">リラックスコース</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ベーシックコース</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">スピードコース</button>
-            </div>
-            <label>オプション</label>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中(キャミソールライン)</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
             </div>
         </div>
+
 
         <div id="whitening" class="menu-section">
             <label>◆マッサージコース◆</label>
@@ -310,10 +367,13 @@
         let currentDate = new Date();
         let availabilityCache = {};
         let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
+        let totalAmount = 0; // 合計金額を格納する変数
+        let menuPrice = 0; // メニューの価格
+        let optionsPrice = 0; // オプションの合計価格
 
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2006165697-mbD8aMBb'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -327,8 +387,8 @@
 function updateDisplayInfo() {
     const name = document.getElementById('name').value;
     const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
-    const selectedSymptomText = selectedSymptom.length > 0 ? `・<span style="color:red;"><strong>メニュー</strong></span>：${selectedSymptom.join(', ')}` : '・メニューが未選択です'; // メニューを複数選択可能に
     const irradiationsText = irradiationsCount ? `・<span style="color:red;"><strong>オプション</strong></span>：${irradiationsCount}` : '・オプション無し';
+    const totalAmountText = `・<span style="color:red;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
     const selectedDateText = selectedFullDate ? `・<span style="color:red;"><strong>希望日時</strong></span>：${selectedFullDate}` : '・日時が未選択です'; // 日付が未選択の場合のメッセージを追加
 
     // displayInfo要素に情報を表示
@@ -337,11 +397,11 @@ function updateDisplayInfo() {
         <hr>
         <p>${visitCountText}</p>
         <hr>
-        <p>${selectedSymptomText}</p>
-        <hr>
         <p>${irradiationsText}</p>
         <hr>
         <p>${selectedDateText}</p>
+        <hr>
+        <p>${totalAmountText}</p>
         <hr>
     `;
 }
@@ -371,7 +431,6 @@ function selectSymptom(button) {
     const buttons = document.querySelectorAll('.symptoms button');
     buttons.forEach(btn => btn.classList.remove('active'));
 
-    
     // クリックされたボタンを選択状態に
     button.classList.add('active');
 
@@ -380,25 +439,42 @@ function selectSymptom(button) {
     selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
     menuPrice = parseInt(button.getAttribute('data-price'), 10);  // メニューの価格を取得
 
+    // 全てのirradiationsを非表示にする
+    document.querySelectorAll('.irradiations').forEach(section => {
+        section.style.display = 'none';
+    });
+
+    // 選択された症状に応じたirradiationsを表示
+    if (symptomName === "小顔輪郭矯正") {
+        document.getElementById('irradiations1').style.display = 'flex';
+    } else if (symptomName === "ピーリングメニュー") {
+        document.getElementById('irradiations2').style.display = 'flex';
+    } else if (symptomName === "毛穴ハイドラメニュー") {
+        document.getElementById('irradiations3').style.display = 'flex';
+    } else if (symptomName === "肌質改善光フォトメニュー") {
+        document.getElementById('irradiations4').style.display = 'flex';
+    } else if (symptomName === "小顔矯正顔筋リフトアップコース") {
+        document.getElementById('irradiations5').style.display = 'flex';
+    }
+
+
     // 表示を更新
     updateDisplayInfo();
 }
 
+
 function selectirradiations(button) {
-    // ボタンの選択状態を切り替える
-    button.classList.toggle('active');
+    // 全ボタンの選択をリセット
+    const buttons = document.querySelectorAll('.irradiations button');
+    buttons.forEach(btn => btn.classList.remove('active'));
 
-    // 選択されたオプションを取得
-    const selectedButtons = document.querySelectorAll('.irradiations button.active');
-    const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-    irradiationsCount = selectedIrradiations.join(', ');
+    // クリックされたボタンを選択状態に
+    button.classList.add('active');
 
-        // すべてのオプションの価格を再計算
-        optionsPrice = 0; // 全体をリセットして再計算
-        selectedButtons.forEach(btn => {
-            const price = parseInt(btn.getAttribute('data-price'), 10);
-            optionsPrice += price;
-        });
+    // 選択されたメニューの名前と価格を取得
+    const IrradiationsName = button.textContent;  // ボタンのテキストを取得
+    irradiationsCount = [IrradiationsName];  // 選択されたメニュー名を配列として保存
+    menuPrice = parseInt(button.getAttribute('data-price'), 10);  // メニューの価格を取得
 
     // 表示を更新
     updateDisplayInfo();
@@ -486,15 +562,15 @@ function updateTotalAmount() {
             };
 
 // フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.selectedSymptom) {
-    alert('お名前・電話番号ご記入ください。');
+if (!formData.name || !formData.phone || !formData.irradiationsCount) {
+    alert('お名前・電話番号・メニューすべてご記入ください。');
     return;
 }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
